# dynalog

./: pyproject.toml
dynalog/: __init__.py  config.py  logger.py  settings.toml
