[project]
name = "dynalog"
version = "0.1.0"
description = ""
authors = [
    {name = "kolikaran1992",email = "kolikaran1992@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "dynaconf (>=3.2.11,<4.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

